test/files/pos/t7232d/Entry.java
package pack;

public class Entry {
}
