test/files/neg/t11575b/Base.java
public class Base {
    long[] counts;
}
